--- a/HIV.ipynb
+++ b/HIV.ipynb
@@ -114,7 +114,7 @@
         "\n",
         "  return df"
       ],
-      "execution_count": 26,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -154,9 +154,42 @@
         "\n",
         "  return get_association_rules(in_file, min_support, \n",
         "                               min_confidence, min_lift, \n",
-        "                               min_conviction, max_len)"
+        "                               min_conviction, max_len)\n",
+        "\n",
+        "# Add a new column that has the distance between the head/tail positions  \n",
+        "# Only makes sense if max_len is 2, that is we have rules in the form of A -> B\n",
+        "def add_distance_column(df_in):\n",
+        "  df = df_in.copy()\n",
+        "   \n",
+        "  head = df['antecedents']\n",
+        "  tail = df['consequents']\n",
+        "\n",
+        "  head = head.astype(str)\n",
+        "  tail = tail.astype(str)\n",
+        "\n",
+        "  # Remove forzenset chars before/after the position\n",
+        "  head = head.str.slice(13,-3,1)\n",
+        "  tail = tail.str.slice(13,-3,1)\n",
+        "\n",
+        "  head = head.astype(int)\n",
+        "  tail = tail.astype(int)\n",
+        "\n",
+        "  # Calculate absolute value of distance between head and tail positions\n",
+        "  distance = head.subtract(tail).apply(abs)\n",
+        "  df['distance'] = distance\n",
+        "  return df\n",
+        "\n",
+        "def filter_rules_based_on_distance(df_in, min_distance):\n",
+        "  df = df_in.copy()\n",
+        "\n",
+        "  df = add_distance_column(df)\n",
+        "\n",
+        "  # Filter rules based on distance between head and tail positions  \n",
+        "  df = df[ df['distance'] >= min_distance ]\n",
+        "\n",
+        "  return df"
       ],
-      "execution_count": 27,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -166,7 +199,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7c30264-a987-4e4b-9976-0c00ee0991ef"
+        "outputId": "cfca372f-4036-41c4-c092-d947052c950b"
       },
       "source": [
         "pd.set_option('max_columns', 10, 'display.expand_frame_repr', False)\n",
@@ -174,40 +207,49 @@
         "\n",
         "param_dict = {  \n",
         "    \"in_file\": \"https://raw.githubusercontent.com/kxk302/HIV/main/data/HIV_V3_codonmsa_macse_pre.tsv\",\n",
-        "    \"min_support\": 0.050, \n",
-        "    \"min_confidence\": 0.800, \n",
+        "    \"min_support\": 0.010, \n",
+        "    \"min_confidence\": 0.500, \n",
         "    \"min_lift\": 2.0, \n",
         "    \"min_conviction\": 2.0, \n",
-        "    \"max_len\": 3\n",
+        "    \"max_len\": 2\n",
         "}\n",
         "\n",
         "hiv_rules = get_association_rules_param(param_dict)\n",
+        "\n",
+        "# Filter rules based on distance between head and tail positions\n",
+        "hiv_rules = filter_rules_based_on_distance(hiv_rules, 15)\n",
+        "\n",
         "num_rules = hiv_rules.shape[0]\n",
+        "hiv_rules_sorted = hiv_rules.sort_values('distance', ascending=False)\n",
         "print('Number of rules: {}'.format(num_rules))\n",
         "print('HIV dataset association rules: ')\n",
-        "print(hiv_rules.head(num_rules))\n"
+        "print(hiv_rules_sorted.head(num_rules))\n"
       ],
-      "execution_count": 28,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Number of rules: 586\n",
+            "Number of rules: 17\n",
             "HIV dataset association rules: \n",
-            "     antecedents consequents  antecedent support  consequent support   support  confidence      lift  leverage  conviction\n",
-            "10         (A84)       (G52)            0.185841            0.328171  0.151917    0.817460  2.490958  0.090930    3.680454\n",
-            "14         (C13)       (T12)            0.085546            0.169617  0.076696    0.896552  5.285757  0.062186    8.027040\n",
-            "20         (C46)       (T45)            0.487463            0.485988  0.485251    0.995461  2.048324  0.248349  113.253933\n",
-            "21         (T45)       (C46)            0.485988            0.487463  0.485251    0.998483  2.048324  0.248349  337.761799\n",
-            "23         (C49)       (T12)            0.067109            0.169617  0.058260    0.868132  5.118204  0.046877    6.297075\n",
-            "...          ...         ...                 ...                 ...       ...         ...       ...       ...         ...\n",
-            "2764  (G13, T45)       (G12)            0.073746            0.121681  0.058997    0.800000  6.574545  0.050023    4.391593\n",
-            "2765  (G12, T45)       (G13)            0.063422            0.152655  0.058997    0.930233  6.093697  0.049315   12.145280\n",
-            "2769  (G12, T49)       (G13)            0.121681            0.152655  0.112832    0.927273  6.074308  0.094257   11.650996\n",
-            "2771       (G12)  (G13, T49)            0.121681            0.151917  0.112832    0.927273  6.103795  0.094346   11.661136\n",
-            "2905  (T45, G48)       (G52)            0.101770            0.328171  0.089233    0.876812  2.671812  0.055835    5.453670\n",
-            "\n",
-            "[586 rows x 9 columns]\n"
+            "    antecedents consequents  antecedent support  consequent support   support  confidence       lift  leverage  conviction  distance\n",
+            "143       (G27)      (T159)            0.016224            0.248525  0.011799    0.727273   2.926356  0.007767    2.755408       132\n",
+            "85        (C37)      (T159)            0.089971            0.248525  0.067847    0.754098   3.034295  0.045487    3.055998       122\n",
+            "193       (T13)       (T85)            0.029499            0.107670  0.018437    0.625000   5.804795  0.015260    2.379548        72\n",
+            "29        (G76)        (A8)            0.015487            0.353245  0.012537    0.809524   2.291679  0.007066    3.395465        68\n",
+            "126       (G12)       (G52)            0.121681            0.328171  0.083333    0.684848   2.086864  0.043401    2.131765        40\n",
+            "168       (G51)       (T12)            0.030236            0.169617  0.019174    0.634146   3.738706  0.014046    2.269715        39\n",
+            "155       (T82)       (G45)            0.013274            0.185841  0.011062    0.833333   4.484127  0.008595    4.884956        37\n",
+            "111       (C49)       (T12)            0.067109            0.169617  0.058260    0.868132   5.118204  0.046877    6.297075        37\n",
+            "57        (C16)       (G52)            0.022861            0.328171  0.018437    0.806452   2.457412  0.010934    3.471116        36\n",
+            "55        (C16)       (G51)            0.022861            0.030236  0.016224    0.709677  23.471282  0.015533    3.340298        35\n",
+            "137       (G17)       (G52)            0.022124            0.328171  0.016224    0.733333   2.234607  0.008964    2.519358        35\n",
+            "54        (G51)       (C16)            0.030236            0.022861  0.016224    0.536585  23.471282  0.015533    2.108562        35\n",
+            "160       (T13)       (G48)            0.029499            0.191003  0.022124    0.750000   3.926641  0.016490    3.235988        35\n",
+            "11        (A17)       (G52)            0.015487            0.328171  0.011799    0.761905   2.321669  0.006717    2.821681        35\n",
+            "52        (C16)       (C49)            0.022861            0.067109  0.016962    0.741935  11.055654  0.015427    3.614952        33\n",
+            "38        (A84)       (G52)            0.185841            0.328171  0.151917    0.817460   2.490958  0.090930    3.680454        32\n",
+            "175       (T25)       (G52)            0.034661            0.328171  0.023599    0.680851   2.074683  0.012224    2.105064        27\n"
           ],
           "name": "stdout"
         }
